fix: align margin top in footer component.

--- a/src/components/Button/style.module.css
+++ b/src/components/Button/style.module.css
@@ -7,7 +7,7 @@
 
 .primary {
   padding: clamp(1rem, 1.5vw, 1.6rem) clamp(2rem, 3vw, 2.8rem);
-  margin-top: -3.5em;
+  margin-top: -3em;
   color: var(--gray-100);
   background-color: var(--gray-600);
   border-radius: clamp(0.8rem, 1.5vw, 1.6rem);
@@ -15,7 +15,7 @@
 
 .secondary {
   padding: clamp(0.6rem, 1.5vw, 1.2rem) clamp(1.6rem, 3vw, 2.4rem);
-  margin-top: -3.5em;
+  margin-top: -3em;
   color: var(--gray-200);
   background-color: var(--gray-800);
   border-radius: clamp(0.8rem, 1.5vw, 1.6rem);
